chore: remove npm package and workflow npm publish

--- a/.github/workflows/version-bump.yml
+++ b/.github/workflows/version-bump.yml
@@ -26,12 +26,6 @@ jobs:
       - name: Install Rust
         uses: dtolnay/rust-toolchain@stable
 
-      - name: Setup Node.js
-        uses: actions/setup-node@v4
-        with:
-          node-version: '20'
-          registry-url: 'https://registry.npmjs.org'
-
       - name: Determine Version
         id: version
         run: |
@@ -75,12 +69,6 @@ jobs:
         run: |
           sed -i '' "s/^version = \".*\"/version = \"${{ steps.version.outputs.new_version }}\"/" Cargo.toml
 
-      - name: Update npm package.json Version
-        run: |
-          cd npm
-          npm version ${{ steps.version.outputs.new_version }} --no-git-tag-version
-          cd ..
-
       - name: Build Release Binary
         run: cargo build --release
 
@@ -97,7 +85,7 @@ jobs:
 
       - name: Commit Version Update
         run: |
-          git add Cargo.toml npm/package.json
+          git add Cargo.toml
           git commit -m "chore(release): bump version to ${{ steps.version.outputs.new_version }} [skip ci]"
           git push
 
@@ -117,10 +105,3 @@ jobs:
           prerelease: false
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-
-      - name: Publish to npm
-        run: |
-          cd npm
-          npm publish --access public
-        env:
-          NODE_AUTH_TOKEN: ${{ secrets.NPM_TOKEN }}
